@@ -1,14 +1,8 @@
 AUTOMAKE_OPTIONS = foreign
 
-#if INCLUDED_LIBGC
-#libgc_SUBDIRS = libgc
-#else
-libgc_SUBDIRS =
-#endif
+SUBDIRS = @libgc_dir@ mono doc docs runtime scripts man data
 
-SUBDIRS = $(libgc_SUBDIRS) mono doc docs runtime scripts man data
-
-#EXTRA_SUBDIRS = libgc
+dnl EXTRA_SUBDIRS = libgc
 
 EXTRA_DIST= mono.pc.in mono.spec.in
 
